Remove call to Signature.getProvider() in debug log
The debug log message makes a call to Signature.getProvider() too early.
This causes Signature.chooseFirstProvider() to be called which matches
 the first provider always rather than the correct provider based on
 PrivateKey.getAlgorithm() when there are multiple providers.
This debug log was changed in this commit and introduced the issue: https://github.com/apache/santuario-xml-security-java/commit/1f4891867a938b29f2f1904be35b07d113d3eda9
Added unit test cases with fake provider